cloud/k3s/backend/wp-bitnami/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-bitnami
spec:
  selector:
    matchLabels:
      app: wp-bitnami
  template:
    metadata:
      labels:
        app: wp-bitnami
        component: workload
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 4
        fsGroup: 33
      volumes:
      - name: wp-bitnami-persistent-storage
        persistentVolumeClaim:
          claimName: wp-bitnami-pv-claim
      containers:
      - name: wp-bitnami
        image: bitnami/wordpress:6
        volumeMounts:
        - name: wp-bitnami-persistent-storage
          mountPath: /bitnami/wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wp-bitnami
spec:
  selector:
    app: wp-bitnami
  type: LoadBalancer
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-bitnami
  labels:
    name: wp-bitnami
spec:
  ingressClassName: nginx
  tls:
  - secretName: jsxjp-tls
    hosts: [ "wp.jsx.jp" ]
  rules:
  - host: wp.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wp-bitnami
            port:
              number: 80
